Refactor component styles and add scroll animation almost done but not yet responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+:root {
+  --light : #E8E2DA;
+  --dark : #2E2A27;
+}
+
+.wrap {
+  background-color: var(--dark);
+}
